# malloc_hook_toy

./: .gitignore  CMakeLists.txt  README.md  perf_test.sh
include/: malloc_hook.h
src/: malloc_hook.c
tests/: hook_performance.c  new_hook_performance.c  raw_performance.c
